--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,11 @@
-name: Build and Push
+name: Docker CI
 
 on:
   schedule:
     - cron: '0 10 * * *'
   push:
     branches: [ master ]
+  pull_request:
 
 jobs:
   build:
@@ -35,19 +36,19 @@ jobs:
       - name: Build and push (alpine)
         uses: docker/build-push-action@v2
         with:
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: wildwildangel/alpine
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
           context: alpine
-          file: ./Dockerfile
+          file: ./alpine/Dockerfile
 
       - name: Build and push (devtoolset-7-toolchain-centos7)
         uses: docker/build-push-action@v2
         with:
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: wildwildangel/devtoolset-7-toolchain-centos7
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
-          context: alpine
-          file: ./Dockerfile
+          context: devtoolset-7-toolchain-centos7
+          file: ./devtoolset-7-toolchain-centos7/Dockerfile
