--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,4 +1,4 @@
 FROM node:alpine
-RUN apk add --no-cache python make g++
+RUN apk --no-cache -U upgrade && apk add --no-cache python make g++
 WORKDIR /usr/src/app
 VOLUME /usr/src/app
