--- a/devtoolset-7-toolchain-centos7/Dockerfile
+++ b/devtoolset-7-toolchain-centos7/Dockerfile
@@ -1,7 +1,9 @@
 FROM centos/devtoolset-7-toolchain-centos7
 USER root
-RUN yum install -y rh-nodejs14-nodejs && yum clean all -y
-COPY entrypoint.sh /entrypoint.sh
+RUN \
+    curl -LfSs https://rpm.nodesource.com/setup_lts.x | bash - && \
+    yum install -y nodejs && \
+    yum clean all -y
+
 WORKDIR /usr/src/app
 VOLUME /usr/src/app
-ENTRYPOINT ["/entrypoint.sh"]
