--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
             platform: linux/amd64,linux/386
           - name: wildwildangel/docker-prebuild-centos7
             context: centos7
-            platform: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+            platform: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.0
@@ -60,7 +60,7 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           context: ${{ matrix.image.context }}
-          platform: ${{ matrix.image.platform }}
+          platforms: ${{ matrix.image.platform }}
           pull: true
           push: ${{ github.event_name != 'push' || github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/') }}
           cache-from: type=gha
