--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.4.0
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+
       - name: Login to DockerHub
         uses: docker/login-action@v1.10.0
         with:
