--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
             platform: linux/amd64
           - name: wildwildangel/docker-prebuild-centos7
             context: centos7
-            platform: linux/amd64,linux/arm/v7,linux/arm64/v8
+            platform: linux/amd64,linux/arm64/v8
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.0
