fix: devtoolset-7 does not support Node 18

--- a/devtoolset-7-toolchain-centos7/Dockerfile
+++ b/devtoolset-7-toolchain-centos7/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos/devtoolset-7-toolchain-centos7
 USER root
 RUN \
-    curl -LfSs https://rpm.nodesource.com/setup_lts.x | bash - && \
+    curl -LfSs https://rpm.nodesource.com/setup_16.x | bash - && \
     yum install -y nodejs && \
     yum clean all -y
 
