--- a/centos7/Dockerfile
+++ b/centos7/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:7
 
 RUN \
-    curl -LfSs https://rpm.nodesource.com/setup_lts.x | bash - && \
+    curl -LfSs https://rpm.nodesource.com/setup_16.x | bash - && \
     yum install -y nodejs gcc-c++ make python3 && \
     yum clean all -y
 
