--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,6 +28,9 @@ jobs:
           - name: wildwildangel/docker-prebuild-centos7
             context: centos7
             platform: linux/amd64,linux/arm64/v8
+          - name: wildwildangel/docker-prebuild-centos8
+            context: centos8
+            platform: linux/amd64,linux/arm64/v8
     steps:
       - name: Checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3
